--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <div class="hero-content">
                 <h1>Where Data Meets Creativity</h1>
                 <p>Transforming complex data into beautiful, actionable insights that drive business growth</p>
-                <p>Using advanced analytics <span class="math-display">\[\frac{\partial}{\partial t}\]</span> to solve complex problems</p>
+                <p>Using advanced analytics to solve complex problems</p>
                 <a href="#services" class="btn">Explore Our Services</a>
             </div>
         </div>
