--- a/index.html
+++ b/index.html
@@ -116,10 +116,43 @@
       color: var(--primary);
     }
 
-    /* Charts */
-    .charts {
+    /* Industries Section */
+    .industries {
       padding: 4rem 2rem;
+      background-color: #f8f9fa;
       text-align: center;
+    }
+    .industries h2 {
+      color: var(--primary);
+      margin-bottom: 3rem;
+      font-size: 2.5rem;
+    }
+    .industry-container {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      gap: 2rem;
+    }
+    .industry-card {
+      background: var(--secondary);
+      border-radius: 10px;
+      padding: 2rem;
+      width: 30%;
+      min-width: 250px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+    .industry-card:hover {
+      transform: translateY(-5px);
+    }
+    .industry-card h3 {
+      color: var(--primary);
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+    .industry-card p {
+      color: #555;
+      line-height: 1.6;
     }
 
     /* Footer */
@@ -138,39 +171,7 @@
     <div class="logo"><a href="#">AVG Analytics</a></div>
     <div class="links">
       <a href="#services">Services</a>
-      <div class="dropdown">
-        <a href="#">Industries</a>
-        <div class="dropdown-content">
-          <div class="dropdown">
-            <a href="#">Restaurant Analytics</a>
-            <div class="dropdown-content">
-              <a href="#">Restaurant Analytics Solutions</a>
-              <a href="#">Waste Tracker</a>
-              <a href="#">Profitability Dashboard</a>
-            </div>
-          </div>
-          <div class="dropdown">
-            <a href="#">Game Analytics</a>
-            <div class="dropdown-content">
-              <a href="#">Game Analytics Solutions</a>
-              <a href="#">Game Health Analysis</a>
-              <a href="#">Player Retention Analysis</a>
-              <a href="#">Review Sentiment Analysis</a>
-              <a href="#">Level Drop-Off Funnel Analysis</a>
-            </div>
-          </div>
-          <div class="dropdown">
-            <a href="#">Real Estate Analytics</a>
-            <div class="dropdown-content">
-              <a href="#">Real Estate Analytics Solutions</a>
-              <a href="#">Rental ROI Calculator</a>
-              <a href="#">Agent Performance Dashboard</a>
-              <a href="#">Property Type Heatmap</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a href="#charts">Insights</a>
+      <a href="#industries">Industries</a>
       <a href="#contact">Contact</a>
     </div>
   </nav>
@@ -202,10 +203,23 @@
     </div>
   </section>
 
-  <!-- Charts -->
-  <section class="charts" id="charts">
-    <h2>Sample Insights</h2>
-    <canvas id="myChart" width="400" height="200"></canvas>
+  <!-- Industries Section -->
+  <section class="industries" id="industries">
+    <h2>Industries We Serve</h2>
+    <div class="industry-container">
+      <div class="industry-card">
+        <h3>Restaurant Analytics</h3>
+        <p>Optimize your food business with data-driven insights</p>
+      </div>
+      <div class="industry-card">
+        <h3>Game Analytics</h3>
+        <p>Enhance player experience and maximize engagement</p>
+      </div>
+      <div class="industry-card">
+        <h3>Real Estate Analytics</h3>
+        <p>Make smarter property investment decisions</p>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -213,38 +227,5 @@
     <p>© 2025 AVG Analytics. All Rights Reserved.</p>
   </footer>
 
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-    const ctx = document.getElementById('myChart').getContext('2d');
-    new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: ['Item A', 'Item B', 'Item C', 'Item D'],
-        datasets: [{
-          label: 'Profit ($)',
-          data: [1200, 900, 1500, 700],
-          backgroundColor: 'rgba(0, 229, 255, 0.2)',
-          borderColor: '#0A1F44',
-          borderWidth: 2
-        }]
-      },
-      options: {
-        responsive: true,
-        plugins: {
-          legend: {
-            labels: { color: '#0A1F44' }
-          }
-        },
-        scales: {
-          x: { ticks: { color: '#0A1F44' } },
-          y: { ticks: { color: '#0A1F44' } }
-        }
-      }
-    });
-  </script>
-
 </body>
 </html>
-
-
