--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     :root {
       --primary: #0A1F44;   /* Midnight Blue */
-      --secondary: #FFFFFF; /* White */
-      --accent: #00E5FF;    /* Bright Cyan */
+      --secondary: #00E5FF;    /* Bright Cyan */
+      --accent: #FFFFFF; /* White */
       --light: #FFFFFF;     /* White Text */
       --dark: #0A1F44;      /* Midnight Blue for text contrast */
     }
